--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
         </ol>
         <p><b>Napomena:</b><i>Voditelju kursa poslati link do kreiranog GItHUB repozitorijuma i link do objavljenog dokumenta.</i></p>
         <p>Nakon završenog kursa možete preći na <u><mark>HTML i CSS Fundamentals</mark></u>.</p>
+        <p>Srećno!
+            
+        </p>
     </body>
 </html>
